Add login tests CI workflow